@@ -18,8 +18,7 @@
 
 package org.mycore.wcms2;
 
-import java.io.File;
-import java.util.Collections;
+import java.nio.file.Path;
 import java.util.List;
 import java.util.function.Supplier;
 
@@ -27,20 +26,21 @@ import org.mycore.common.config.annotation.MCRConfigurationProxy;
 import org.mycore.common.config.annotation.MCRProperty;
 import org.mycore.resource.provider.MCRFileSystemResourceProvider;
 import org.mycore.resource.provider.MCRResourceProvider;
+import org.mycore.resource.provider.MCRResourceProviderBase;
 import org.mycore.resource.provider.MCRResourceProviderMode;
 
 /**
- * {@link MCRWCMSWebResourceProvider} is an implementation of {@link MCRResourceProvider} that looks up web resources
+ * A {@link MCRWCMSWebResourceProvider} is a {@link MCRResourceProvider} that looks up web resources
  * in the file system. It uses the directory configured in as {@link MCRWCMSUtil#getWCMSDataDir()} (which is the
  * directory that the WCMS writes into) as a base directory for the lookup.
  * <p>
- * This provider replaces the previously used <code>MCRWebPagesSynchronizer</code> that copied the content
- * of the above-mentioned directory in the webapp directory used by the web container.
+ * <em>This provider replaces the previously used <code>MCRWebPagesSynchronizer</code> that copied the content
+ * of the above-mentioned directory in the webapp directory used by the web container.</em>
  * <p>
- * The following configuration options are available, if configured automatically:
+ * The following configuration options are available:
  * <ul>
- * <li> The property suffix {@link MCRWCMSWebResourceProvider#COVERAGE_KEY} can be used to provide short
- * description for human beings in order to better understand the providers use case.
+ * <li> The property suffix {@link MCRResourceProviderBase#COVERAGE_KEY} can be used to
+ * provide a short description of the providers purpose; used in log messages.
  * </ul>
  * Example:
  * <pre>
@@ -49,16 +49,14 @@ import org.mycore.resource.provider.MCRResourceProviderMode;
  * </pre>
  */
 @MCRConfigurationProxy(proxyClass = MCRWCMSWebResourceProvider.Factory.class)
-public class MCRWCMSWebResourceProvider extends MCRFileSystemResourceProvider {
-
-    public static final String COVERAGE_KEY = "Coverage";
+public final class MCRWCMSWebResourceProvider extends MCRFileSystemResourceProvider {
 
     public MCRWCMSWebResourceProvider(String coverage) {
         super(coverage, MCRResourceProviderMode.WEB_RESOURCES, getBaseDirs());
     }
 
-    private static List<File> getBaseDirs() {
-        return Collections.singletonList(MCRWCMSUtil.getWCMSDataDir());
+    private static List<Path> getBaseDirs() {
+        return List.of(MCRWCMSUtil.getWCMSDataDir().toPath());
     }
 
     @Override
